# pavex-diary

./: .gitignore  Cargo.toml  Dockerfile  License.txt  README.md  Secrets.dev.toml  Secrets.toml  Shuttle.toml  bacon.toml  justfile
app/: Cargo.toml
app/src/: blueprint.rs  configuration.rs  lib.rs  static_file.rs  template.rs
app/src/routes/: index.rs  mod.rs
content/: index.md
server/: Cargo.toml
server/configuration/: base.yml  dev.yml  prod.yml
server/tests/integration/: helpers.rs  index.rs  main.rs  static_files.rs
server_sdk/: Cargo.toml
server_sdk/src/: lib.rs
shuttle/: Cargo.toml
shuttle/src/: main.rs  shuttle_pavex.rs
static/: screen.css  script.js
templates/: base.html
