[package]
name = "shuttle"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dotenvy = "0.15.7"
pavex = "0.1.77"
server = { path = "../server" }
server_sdk = { path = "../server_sdk" }
shuttle-runtime = { version = "0.52.0", features = [ "setup-otel-exporter" ] }
tracing = "0.1.41"
