[package]
name = "shuttle"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
app = { path = "../app" }
dotenvy = "0.15.7"
pavex = "0.1.78"
server = { path = "../server" }
server_sdk = { path = "../server_sdk" }
shuttle-runtime = { version = "0.52.0", default-features = false }
tracing = "0.1.41"